brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • brocode-logs.log
    • brocode-connectivity-diagnostics.txt

  Connectivity diagnostics
    - OPENAI_BASE_URL is set and may affect connectivity.
      - OPENAI_BASE_URL = hello

› 1. Yes  Share the current brocode session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
