brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 9336
expression: rendered
---
• Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› [PROMPT HERE]

  ? for shortcuts                                    100% context left
