brocode-rs/tui/src/chatwidget/snapshots/brocode_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› [PROMPT HERE]                                                                 "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
